Day 1 문제 3번 풀이 올립니다.

--- a/sec_ds_lv3_prob3_prob.ipynb
+++ b/sec_ds_lv3_prob3_prob.ipynb
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "44a5b6c1",
+   "id": "affe8319",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6639be37",
+   "id": "b1dd0644",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "11d7dc95",
+   "id": "fef5303a",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "20647817",
+   "id": "46a1abc1",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0a3569b4",
+   "id": "4784989e",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "89a6cb52",
+   "id": "084b6090",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c4d0bb76",
+   "id": "7343b907",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fe942630",
+   "id": "0160a69f",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "5891a973",
+   "id": "8adef049",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "00efd89c",
+   "id": "028deaad",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "46aa1b64",
+   "id": "cec2ed43",
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "94bd1c11",
+   "id": "7b79bf6a",
    "metadata": {},
    "outputs": [
     {
@@ -2251,7 +2251,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "e17e847d",
+   "id": "5ce36434",
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "4acfed93",
+   "id": "42576e27",
    "metadata": {},
    "outputs": [
     {
@@ -2766,7 +2766,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "be51f747",
+   "id": "06cfbb59",
    "metadata": {},
    "outputs": [
     {
@@ -2790,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "adb37a3b",
+   "id": "acadd52b",
    "metadata": {},
    "outputs": [
     {
@@ -2865,7 +2865,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "4b978456",
+   "id": "ec211750",
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a70cf4f",
+   "id": "964c1a1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2908,7 +2908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be7c3284",
+   "id": "fe523393",
    "metadata": {},
    "source": [
     "**Tip groupby의 주요 연산: groupby ~ apply vs ~ transform vs ~ agg**\n",
@@ -2922,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "beb4475c",
+   "id": "6df1a29f",
    "metadata": {},
    "outputs": [
     {
@@ -2957,7 +2957,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "da6f3c41",
+   "id": "11fdf39d",
    "metadata": {},
    "outputs": [
     {
@@ -2993,7 +2993,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "115a70de",
+   "id": "023d3871",
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +3027,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "78de2698",
+   "id": "5b39d676",
    "metadata": {},
    "outputs": [
     {
@@ -3062,7 +3062,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "cbcbe82b",
+   "id": "40df6308",
    "metadata": {},
    "outputs": [
     {
@@ -3097,7 +3097,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "da0b6e4f",
+   "id": "9acb97b0",
    "metadata": {},
    "outputs": [
     {
@@ -3132,7 +3132,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "d6c43266",
+   "id": "0170ed9a",
    "metadata": {},
    "outputs": [
     {
@@ -3168,7 +3168,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "e9b7d968",
+   "id": "11a76cff",
    "metadata": {},
    "outputs": [
     {
@@ -3291,7 +3291,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "89260e20",
+   "id": "a839430a",
    "metadata": {},
    "outputs": [
     {
@@ -3665,7 +3665,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "e8a22e8d",
+   "id": "df3af364",
    "metadata": {},
    "outputs": [
     {
@@ -4040,7 +4040,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "4743be02",
+   "id": "acf3c3d7",
    "metadata": {},
    "outputs": [
     {
@@ -4172,7 +4172,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "f3e5b91e",
+   "id": "736a7704",
    "metadata": {},
    "outputs": [
     {
@@ -4311,7 +4311,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "e1bb3269",
+   "id": "61817c11",
    "metadata": {},
    "outputs": [
     {
@@ -4344,7 +4344,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "b7597ed9",
+   "id": "82cceef3",
    "metadata": {},
    "outputs": [
     {
@@ -4756,7 +4756,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "114a4042",
+   "id": "1483d4cd",
    "metadata": {},
    "outputs": [
     {
@@ -4781,7 +4781,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "7a4a0848",
+   "id": "d9029c5b",
    "metadata": {},
    "outputs": [
     {
@@ -4805,7 +4805,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "79878307",
+   "id": "5f4af4b4",
    "metadata": {},
    "outputs": [
     {
@@ -4871,7 +4871,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "6905d679",
+   "id": "ca7a2a89",
    "metadata": {},
    "outputs": [
     {
@@ -4901,7 +4901,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "84815aca",
+   "id": "dcaa8828",
    "metadata": {},
    "outputs": [
     {
@@ -4929,7 +4929,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "9f7036d2",
+   "id": "c59a4928",
    "metadata": {},
    "outputs": [
     {
@@ -5023,7 +5023,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "0802f55b",
+   "id": "69485341",
    "metadata": {},
    "outputs": [
     {
@@ -5057,7 +5057,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "6625bda3",
+   "id": "71325a5f",
    "metadata": {},
    "outputs": [
     {
@@ -5174,7 +5174,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "11d2f5f7",
+   "id": "592ff694",
    "metadata": {},
    "outputs": [
     {
@@ -5392,7 +5392,7 @@
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "c400ada6",
+   "id": "3c44404a",
    "metadata": {},
    "outputs": [
     {
@@ -5422,7 +5422,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "fdcdb848",
+   "id": "033c803d",
    "metadata": {},
    "outputs": [
     {
@@ -5627,7 +5627,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "5d917214",
+   "id": "e6909c4f",
    "metadata": {},
    "outputs": [
     {
@@ -5990,29 +5990,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
-   "id": "d8e94588",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([245, 418, 415, ..., 513, 443, 439], dtype=int64)"
-      ]
-     },
-     "execution_count": 327,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_basetable1['TotalHour'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 332,
-   "id": "c5914988",
+   "id": "9404b2e3",
    "metadata": {},
    "outputs": [
     {
@@ -6235,7 +6214,9 @@
    "source": [
     "# 방법 2\n",
     "df_prob3 = df_basetable1.join(\n",
-    "    pd.Series(df_basetable1['TotalHour'].values, index = df_basetable1['TotalHour'].index - pd.Timedelta(days=1)).rename('target'),\n",
+    "    pd.Series(\n",
+    "        df_basetable1['TotalHour'].values, \n",
+    "        index = df_basetable1['TotalHour'].index - pd.Timedelta(days=1)).rename('target'),\n",
     "    how ='inner'\n",
     ")\n",
     "df_prob3.head()"
@@ -6244,7 +6225,7 @@
   {
    "cell_type": "code",
    "execution_count": 334,
-   "id": "0b040628",
+   "id": "d6e38d5f",
    "metadata": {},
    "outputs": [
     {
@@ -6465,6 +6446,7 @@
     }
    ],
    "source": [
+    "# 방법 2-2\n",
     "df_prob3 = df_basetable1.assign(\n",
     "    target = pd.Series(df_basetable1['TotalHour'].values, index = df_basetable1['TotalHour'].index - pd.Timedelta(days=1))\n",
     ").pipe(\n",
@@ -6526,7 +6508,8 @@
     "\n",
     "입력 변수: 15분, 30분, 45분, 60분, DayName, Hour, AM, Weekend_yn, Holiday_yn, Avg, TotalHour, \n",
     "\n",
-    "           생산량, 기온, 풍속, 습도, 강수량, 전기요금(계절), 공장인원, 인건비\n",
+    "        생산량, 기온, 풍속, 습도, 강수량, 전기요금(계절), 공장인원, 인건비\n",
+    "\n",
     "※ 입력 변수의 순서는 반드시 나열한 순서로 해야 함.\n",
     "\n",
     "대상 변수: target\n",
@@ -6556,11 +6539,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 345,
    "id": "7a1dea0d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=10, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=4,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=123, splitter='best')"
+      ]
+     },
+     "execution_count": 345,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor # 결정트리 회귀모델(Decision Tree Regression Model)\n",
+    "from sklearn.metrics import mean_absolute_error # 성능 측정 지표:  𝑀𝐴𝐸\n",
+    "\n",
+    "X_dt = \"15분, 30분, 45분, 60분, DayName, Hour, AM, Weekend_yn, Holiday_yn, Avg, TotalHour, 생산량, 기온, 풍속, 습도, 강수량, 전기요금(계절), 공장인원, 인건비\"\n",
+    "X_dt = X_dt.split(', ')\n",
+    "reg_dt = DecisionTreeRegressor(\n",
+    "    max_depth = 10, # 트리의 최대 깊이: 10\n",
+    "    min_samples_leaf = 4, # 리프 노드(Leaf Node)의 최소 샘플 수: 4\n",
+    "    random_state = 123 # 랜덤 시드: 123\n",
+    ")\n",
+    "reg_dt.fit(df_prob3_train[X_dt], df_prob3_train['target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "id": "4a281b6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 'DayName', 37.27394388956255, 46.75807226356938)"
+      ]
+     },
+     "execution_count": 350,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 가장 중요도가 높은 변수의 입력 순서를 A (순서는 1부터 시작) 라고 한다.\n",
+    "# 결정 트리의 prob3_test에 대한 성능을 B라고 한다.\n",
+    "A = np.argmax(reg_dt.feature_importances_) + 1\n",
+    "B = mean_absolute_error(\n",
+    "    df_prob3_test['target'], reg_dt.predict(df_prob3_test[X_dt])\n",
+    ")\n",
+    "(\n",
+    "    A, X_dt[A - 1],\n",
+    "    B, mean_absolute_error(df_prob3_train['target'], reg_dt.predict(df_prob3_train[X_dt]))\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6596,11 +6636,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 353,
    "id": "4b57ef47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36.04762917818188, 35.842003600642194)"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor # 결정트리 회귀모델(Decision Tree Regression Model)\n",
+    "from sklearn.metrics import mean_squared_error # 성능 측정 지표:  𝑀𝐴𝐸\n",
+    "\n",
+    "X_gb = \"15분, 30분, 45분, 60분, DayName, Hour, AM, Weekend_yn, Holiday_yn, Avg, TotalHour, 생산량, 기온, 풍속, 습도, 강수량, 전기요금(계절), 공장인원, 인건비\"\n",
+    "X_gb = X_gb.split(', ')\n",
+    "reg_gb = GradientBoostingRegressor(\n",
+    "    loss = 'huber', # 손실함수: huber\n",
+    "    n_estimators  = 75, # 트리의 수: 75\n",
+    "    max_depth = 7, # 트리의 최대 깊이: 7\n",
+    "    min_samples_leaf = 4, # 리프 노드(Leaf Node)의 최소 샘플 수: 4\n",
+    "    random_state = 123# 랜덤 시드:123\n",
+    ")\n",
+    "reg_gb.fit(df_prob3_train[X_gb], df_prob3_train['target'])\n",
+    "\n",
+    "C = mean_absolute_error(\n",
+    "    df_prob3_test['target'], reg_gb.predict(df_prob3_test[X_gb])\n",
+    ")\n",
+    "(\n",
+    "    C, \n",
+    "    mean_absolute_error(\n",
+    "        df_prob3_train['target'], reg_gb.predict(df_prob3_train[X_gb])\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "id": "e451a4a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 37.27394388956255, 36.04762917818188, 78.32157306774442, 78.322)"
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A, B, C, A + B + C, round(A + B + C, 3)"
+   ]
   },
   {
    "cell_type": "markdown",
