--- a/sec_ds_lv3_prob3_prob.ipynb
+++ b/sec_ds_lv3_prob3_prob.ipynb
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3fafe95e",
+   "id": "f063fcc6",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cda33c15",
+   "id": "296389a4",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "254732e0",
+   "id": "ef3937c8",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e4718918",
+   "id": "5a703509",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d4b89f4e",
+   "id": "bb88bd2a",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "24221dec",
+   "id": "7bf965aa",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b8c47fe5",
+   "id": "e9f232cb",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7a1c1ab4",
+   "id": "b0b57636",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5077df25",
+   "id": "eb6ace21",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bb5b26e1",
+   "id": "d435446b",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ad21ce34",
+   "id": "5f9f28e7",
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d1ad8445",
+   "id": "de1f0b24",
    "metadata": {},
    "outputs": [
     {
@@ -2251,7 +2251,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dc209a07",
+   "id": "656db5ef",
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "05d3b37e",
+   "id": "2203e2bf",
    "metadata": {},
    "outputs": [
     {
@@ -2766,7 +2766,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9870d437",
+   "id": "50fbaaf6",
    "metadata": {},
    "outputs": [
     {
@@ -2790,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5291aa3c",
+   "id": "4956034b",
    "metadata": {},
    "outputs": [
     {
@@ -2865,7 +2865,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "130b198b",
+   "id": "1ed4e867",
    "metadata": {},
    "outputs": [
     {
@@ -2894,7 +2894,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "89a711cf",
+   "id": "e310b61d",
    "metadata": {},
    "outputs": [
     {
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aace0ce5",
+   "id": "58b4cafb",
    "metadata": {},
    "source": [
     "**Tip groupby의 주요 연산: groupby ~ apply vs ~ transform vs ~ agg**\n",
@@ -2933,7 +2933,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fe932550",
+   "id": "564ffb51",
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2968,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "21cfc478",
+   "id": "0978985d",
    "metadata": {},
    "outputs": [
     {
@@ -3004,7 +3004,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8c81d17a",
+   "id": "04cfcfcd",
    "metadata": {},
    "outputs": [
     {
@@ -3038,7 +3038,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "36d2808f",
+   "id": "c1232c7c",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c613c9c8",
+   "id": "3021ef4f",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3108,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e46325a2",
+   "id": "07f317b2",
    "metadata": {},
    "outputs": [
     {
@@ -3143,7 +3143,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9e4ad221",
+   "id": "c603cea5",
    "metadata": {},
    "outputs": [
     {
@@ -3179,7 +3179,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2b21760a",
+   "id": "093755a2",
    "metadata": {},
    "outputs": [
     {
@@ -3302,7 +3302,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f915c2b9",
+   "id": "81a352a5",
    "metadata": {},
    "outputs": [
     {
@@ -3676,7 +3676,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ad02045a",
+   "id": "6740d073",
    "metadata": {},
    "outputs": [
     {
@@ -4051,7 +4051,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3002ac74",
+   "id": "f3d1d3b0",
    "metadata": {},
    "outputs": [
     {
@@ -4183,7 +4183,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "bd1008e8",
+   "id": "28904ca0",
    "metadata": {},
    "outputs": [
     {
@@ -4322,7 +4322,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "061052ac",
+   "id": "9ea28478",
    "metadata": {},
    "outputs": [
     {
@@ -4355,7 +4355,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "575770db",
+   "id": "52010fff",
    "metadata": {},
    "outputs": [
     {
@@ -4767,7 +4767,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2ad1859d",
+   "id": "695e5e15",
    "metadata": {},
    "outputs": [
     {
@@ -4792,7 +4792,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d402aacf",
+   "id": "d75a8cdf",
    "metadata": {},
    "outputs": [
     {
@@ -4816,7 +4816,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "99c52a5c",
+   "id": "fcb17931",
    "metadata": {},
    "outputs": [
     {
@@ -4882,7 +4882,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a768b54b",
+   "id": "bc91075c",
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "960dd80c",
+   "id": "d0391f82",
    "metadata": {},
    "outputs": [
     {
@@ -4940,7 +4940,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "74436ff5",
+   "id": "a3bb011a",
    "metadata": {},
    "outputs": [
     {
@@ -5034,7 +5034,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6067ea07",
+   "id": "553b72dc",
    "metadata": {},
    "outputs": [
     {
@@ -5068,7 +5068,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "32d23924",
+   "id": "66e0c67e",
    "metadata": {},
    "outputs": [
     {
@@ -5185,7 +5185,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "06e881a4",
+   "id": "baac78f2",
    "metadata": {},
    "outputs": [
     {
@@ -5403,7 +5403,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "432c47ee",
+   "id": "6c7a7b17",
    "metadata": {},
    "outputs": [
     {
@@ -5433,7 +5433,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "78390fde",
+   "id": "2c64db13",
    "metadata": {},
    "outputs": [
     {
@@ -5638,7 +5638,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7bb2360d",
+   "id": "ee0daaff",
    "metadata": {},
    "outputs": [
     {
@@ -6002,7 +6002,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "296ba5c5",
+   "id": "ed725d83",
    "metadata": {},
    "outputs": [
     {
@@ -6236,7 +6236,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "627dc3e2",
+   "id": "cf1ce534",
    "metadata": {},
    "outputs": [
     {
@@ -6586,7 +6586,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e69b1483",
+   "id": "de26926d",
    "metadata": {},
    "outputs": [
     {
@@ -6691,7 +6691,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "55f1f0a5",
+   "id": "5c99a72b",
    "metadata": {},
    "outputs": [
     {
@@ -7009,7 +7009,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "1641ed7e",
+   "id": "580c1c6f",
    "metadata": {},
    "outputs": [
     {
@@ -7408,7 +7408,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ba848fb6",
+   "id": "be97b36d",
    "metadata": {},
    "outputs": [
     {
@@ -7484,7 +7484,39 @@
    "id": "c9e54a2b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# MLPRegressor의 파라메터 탐색 루틴입니다.\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error # MAE \n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "X_mlp = ['TotalHour'] + ['lag_{}'.format(i) for i in range(1, 7)]\n",
+    "\n",
+    "params = [\n",
+    "    {'hidden_layer_sizes': [8], 'activation': 'relu'}, # 은닉층: [8], 활성화함수 :'relu'\n",
+    "    {'hidden_layer_sizes': [8, 4], 'activation': 'relu'}, # 은닉층: [8, 4], 활성화함수 :'relu'\n",
+    "    {'hidden_layer_sizes': [8, 4], 'activation': 'logistic'}, # 은닉층: [8, 4], 활성화함수 :'sigmoid'\n",
+    "]\n",
+    "\n",
+    "mae_test = list()\n",
+    "mae_train = list()\n",
+    "for param in params:\n",
+    "    reg_mlp = MLPRegressor(\n",
+    "        learning_rate_init=0.05, # 학습율\n",
+    "        random_state=123, \n",
+    "        max_iter=500, # 학습 루틴 최대 반복 횟수\n",
+    "        **param\n",
+    "    )\n",
+    "    reg_mlp.fit(df_prob4_train[X_mlp], df_prob4_train['target'])\n",
+    "    mae_test.append(\n",
+    "        mean_absolute_error(df_prob4_test['target'], reg_mlp.predict(df_prob4_test[X_mlp]))\n",
+    "    )\n",
+    "    mae_train.append(\n",
+    "        mean_absolute_error(df_prob4_train['target'], reg_mlp.predict(df_prob4_train[X_mlp]))\n",
+    "    )\n",
+    "    print(param, mae_test[-1], mae_train[-1])\n",
+    "np.argmin(mae_test) + 1, np.min(mae_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7508,11 +7540,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "ae0aa7f2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>기온</th>\n",
+       "      <th>풍속</th>\n",
+       "      <th>습도</th>\n",
+       "      <th>강수량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>-3.2</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>-4.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-3.9</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-4.1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>-4.6</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    기온   풍속  습도  강수량\n",
+       "0 -3.2  2.4  71  0.0\n",
+       "1 -4.5  1.5  77  0.0\n",
+       "2 -3.9  2.6  58  0.0\n",
+       "3 -4.1  2.6  56  0.0\n",
+       "4 -4.6  2.6  60  0.0"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_5 = ['기온', '풍속', '습도', '강수량']\n",
+    "df_weather1 = df_info1[X_5].copy()\n",
+    "df_weather1.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7535,11 +7652,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "ca3ee6e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "std_scaler = StandardScaler()\n",
+    "df_weather1[X_5] = std_scaler.fit_transform(df_weather1[X_5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7570,11 +7691,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "d599ba93",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DBSCAN(algorithm='brute', eps=0.5, leaf_size=30, metric='euclidean',\n",
+       "       metric_params=None, min_samples=7, n_jobs=None, p=None)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import DBSCAN #,algorithm = 'brute'\n",
+    "\n",
+    "dbscan = DBSCAN(\n",
+    "    eps = 0.5, # 이웃으로 간주되기 위한 최대거리 0.5,\n",
+    "    min_samples = 7, # 중심점(Core Point)이 되기 위한 최소 이웃의 수 7(자기 자신을 포함한다.) 로 설정한다.\n",
+    "    algorithm = 'brute'\n",
+    ")\n",
+    "dbscan.fit(df_weather1[X_5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "861a2b54",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_weather1['outlier_dbscan'] = dbscan.labels_ == -1"
+   ]
   },
   {
    "cell_type": "markdown",
