--- a/sec_ds_lv3_prob3_kaggle.ipynb
+++ b/sec_ds_lv3_prob3_kaggle.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cb07abae",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "[6168 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d6eee897",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cda1f4ad",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8cbe28ba",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "(6168, 20)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "134b1577",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "96855383",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1063,7 @@
        "[6144 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,22 +1080,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5909d005",
+   "execution_count": 19,
+   "id": "2177de9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['DateHour', '15분', '30분', '45분', '60분', 'DayName', 'Hour', 'AM',\n",
+       "       'Weekend_yn', 'Holiday_yn', 'Avg', 'TotalHour', '생산량', '기온', '풍속',\n",
+       "       '습도', '강수량', '전기요금(계절)', '공장인원', '인건비', 'lag_1', 'lag_2', 'lag_3',\n",
+       "       'lag_4', 'lag_5', 'lag_6'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 문제에서 제시한 데이터셋을 만듭니다.\n",
     "df_prob6_train = df_prob4.loc[df_prob4['DateHour'] < pd.to_datetime('2021-08-14')]\n",
     "df_prob6_test = df_prob4.loc[df_prob4['DateHour'] >= pd.to_datetime('2021-08-14')]\n",
     "# 정답 target은 떼어냅니다.\n",
-    "s_kaggle_ans =  df_prob6_test.pop('target') # Kaggle의 정답으로 간주하겠습니다, 실제 시험에서는 공개 되지 않습니다."
+    "s_kaggle_ans =  df_prob6_test.pop('target') # Kaggle의 정답으로 간주하겠습니다, 실제 시험에서는 공개 되지 않습니다.\n",
+    "X_all = df_prob6_test.columns.tolist()\n",
+    "np.array(X_all)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de560fc",
+   "metadata": {},
+   "source": [
+    "# Kaggle형 풀이 단계\n",
+    "\n",
+    "Step 0: Kaggle용 데이터셋을 만든다.\n",
+    "\n",
+    "Step 1: 검증 방법을 정하고, 검증 루틴을 만듭니다.\n",
+    "\n",
+    "Step 2: Baseline 모델을 만듭니다\n",
+    "\n",
+    "Step 3: 모델 선택 루틴을 만듭니다.\n",
+    "\n",
+    "|DateHour|\tTotalHour|\n",
+    "|----|----|\n",
+    "|2021-08-14 00:00:00|\t102.607580|\n",
+    "|2021-08-14 01:00:00|\t94.078890|\n",
+    "....\t\n",
+    "\n",
+    "Step 4: 모델 개선 작업을 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bde96e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HoldOut 검정: 시점 기준으로 분리\n",
+    "df_train = df_prob6_train.loc[df_prob6_train['DateHour'] < pd.to_datetime('2021-07-14')]\n",
+    "df_valid = df_prob6_train.loc[df_prob6_train['DateHour'] >= pd.to_datetime('2021-07-14')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "96bf619b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "# Step1-2: 검증 루틴입니다.\n",
+    "hist = list()\n",
+    "def eval_model(name, model):\n",
+    "    \"\"\"\n",
+    "        모델의 인스턴스를 받아 검증 결과(MAE)를 구합니다.\n",
+    "        1. HoldOut 검증 - df_train으로 학습하고\n",
+    "        2. df_valid, df_train 에 대한 예측결과에 대한 MAE를 구합니다.\n",
+    "        3. 주어진 모델명으로 평가 결과를 저장합니다.\n",
+    "        4. 가장 최근의 수행결과를 보여 주어 선택하는데 활용하도록 합니다.\n",
+    "        ※ 더 있으면 좋을 만한 요소들을 추가해봅니다.\n",
+    "    Parameters:\n",
+    "        name: str, 모델의 이름,\n",
+    "        model: sklearn object, 모델 인스턴스\n",
+    "    Returns: float\n",
+    "        검증 결과(df_valid, df_train의 MAE)\n",
+    "    \"\"\"\n",
+    "    model.fit(df_train[X_all], df_train['target'])\n",
+    "    result = \"Valid MAE: {:.5f}, Train MAE:{:.5f}\".format(\n",
+    "        mean_absolute_error(df_valid['target'], model.predict(df_valid[X_all])),\n",
+    "        mean_absolute_error(df_train['target'], model.predict(df_train[X_all]))\n",
+    "    )\n",
+    "    hist.append(\n",
+    "        pd.Series([name, result], index=['name', 'result'])\n",
+    "    )\n",
+    "    display(pd.DataFrame(hist).groupby('name').last())\n",
+    "    return result\n",
+    "\n",
+    "# Step 3: 모델 선택 루틴\n",
+    "def select_model(model):\n",
+    "    \"\"\"\n",
+    "        1. 전체 학습데이터(df_prob6_train)로 학습을 합니다. \n",
+    "        2. df_prob6_test에 대한 예측을 합니다.\n",
+    "        3. 예측 결과를 출력양식( DateHour, TotalHour)에 맞춰 csv파일을 만듭니다.\n",
+    "        4. 자가 채점을 위한 예측 결과를 반환합니다.\n",
+    "    Parameters: \n",
+    "        model: sklearn object, 모델 인스턴스\n",
+    "    Returns: 1차원 np.ndarray\n",
+    "        예측 결과\n",
+    "    \"\"\"\n",
+    "    model.fit(df_prob6_train[X_all], df_prob6_train['target'])\n",
+    "    prd = model.predict(df_prob6_test[X_all])\n",
+    "    pd.DataFrame({\n",
+    "        'DateHour': df_prob6_test['DateHour'],\n",
+    "        'TotalHour': prd\n",
+    "    }).to_csv('answer6.csv', index=None)\n",
+    "    return prd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21dfc3df",
+   "metadata": {},
+   "source": [
+    "# Step 2: Baseline 모델을 만듭니다.\n",
+    "\n",
+    "## Ideas\n",
+    "\n",
+    "from 문제 5\n",
+    "\n",
+    "SVR 모델 (C=10, kernel='rbf', gamma = 0.1)\n",
+    "TotalHour, lag_1 ~ 6 까지는 표준화 \n",
+    "\n",
+    "\\+ DecisionTreeRegressor에서 가장 중요한 변수, DayName을 가변수화\n",
+    "\n",
+    "\\+ 가설검정에서 Value Avg 에 대해서 ttest를 얻은 AM 변수 사용\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b3b529d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>baseline</td>\n",
+       "      <td>Valid MAE: 131.97310, Train MAE:45.10490</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            result\n",
+       "name                                              \n",
+       "baseline  Valid MAE: 131.97310, Train MAE:45.10490"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Valid MAE: 131.97310, Train MAE:45.10490'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "ct = ColumnTransformer([\n",
+    "    ('std', StandardScaler(), ['TotalHour'] + ['lag_{}'.format(i) for i in range(1, 7)]),\n",
+    "    ('ohe', OneHotEncoder(drop='first', categories='auto'), ['DayName']),\n",
+    "    ('pt', 'passthrough', ['AM'])\n",
+    "])\n",
+    "reg_svr = make_pipeline(ct, SVR(C = 100, kernel='rbf', gamma=0.1))\n",
+    "reg_svr.fit(df_train[X_all], df_train['target'])\n",
+    "eval_model('baseline', reg_svr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "7516b7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prd = select_model(reg_svr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2559812a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.447543987641904"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(\n",
+    "    s_kaggle_ans, prd\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8daab242",
+   "id": "3c56f49c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fa3ac18",
    "metadata": {},
    "outputs": [],
    "source": []
