Day1 일반 문제 풀이, 설명, Tip 올립니다.

--- a/sec_ds_lv3_prob3_prob.ipynb
+++ b/sec_ds_lv3_prob3_prob.ipynb
@@ -5723,10 +5723,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   8.115</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 17 Dec 2024</td> <th>  Prob (F-statistic):</th> <td>9.11e-12</td>\n",
+       "  <th>Date:</th>             <td>Wed, 18 Dec 2024</td> <th>  Prob (F-statistic):</th> <td>9.11e-12</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:42:55</td>     <th>  Log-Likelihood:    </th> <td> -4857.3</td>\n",
+       "  <th>Time:</th>                 <td>11:54:49</td>     <th>  Log-Likelihood:    </th> <td> -4857.3</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1233</td>      <th>  AIC:               </th> <td>   9735.</td>\n",
@@ -5799,8 +5799,8 @@
        "Dep. Variable:                    Avg   R-squared:                       0.056\n",
        "Model:                            OLS   Adj. R-squared:                  0.049\n",
        "Method:                 Least Squares   F-statistic:                     8.115\n",
-       "Date:                Tue, 17 Dec 2024   Prob (F-statistic):           9.11e-12\n",
-       "Time:                        18:42:55   Log-Likelihood:                -4857.3\n",
+       "Date:                Wed, 18 Dec 2024   Prob (F-statistic):           9.11e-12\n",
+       "Time:                        11:54:49   Log-Likelihood:                -4857.3\n",
        "No. Observations:                1233   AIC:                             9735.\n",
        "Df Residuals:                    1223   BIC:                             9786.\n",
        "Df Model:                           9                                         \n",
@@ -7804,33 +7804,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "id": "6a8728e8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32.88361068048479"
+       "(32.88361068048479, 83.981486070874)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 방법 1: callable\n",
     "from sklearn.metrics import mean_absolute_error # 성능 측정 지표:  𝑀𝐴𝐸(𝑌,𝑌̂ )\n",
     "from sklearn.svm import SVR\n",
     "\n",
-    "X_svr= ['TotalHour'] + ['lag_{}'.format(i) for i in range(1, 7)]\n",
-    "reg_svr = SVR(kernel='precomputed', C= 10) # precomputed를 사용하면, kernel matrix를 만들어 전달합니다.\n",
-    "# train 단계에서는 train set 간의 kernel matrix를 만들면 됩니다.\n",
+    "df_prob4_train[X_svr].dot(df_prob4_train[X_svr].T)\n",
+    "reg_svr = SVR(C = 10, kernel=lambda u, v: u.dot(v.T))\n",
+    "reg_svr.fit(df_prob4_train[X_svr], df_prob4_train['target'])\n",
+    "(\n",
+    "    mean_absolute_error(df_prob4_test['target'], reg_svr.predict(df_prob4_test[X_svr])),\n",
+    "    mean_absolute_error(df_prob4_train['target'], reg_svr.predict(df_prob4_train[X_svr]))\n",
+    ") # 32.88361068048479 83.981486070874"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "adffae51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.88361068048479, 83.981486070874)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 방법 2: precomupted\n",
+    "from sklearn.metrics import mean_absolute_error # 성능 측정 지표:  𝑀𝐴𝐸(𝑌,𝑌̂ )\n",
+    "from sklearn.svm import SVR\n",
+    "\n",
+    "df_prob4_train[X_svr].dot(df_prob4_train[X_svr].T)\n",
+    "reg_svr = SVR(C = 10, kernel='precomputed')\n",
     "reg_svr.fit(df_prob4_train[X_svr].dot(df_prob4_train[X_svr].T), df_prob4_train['target'])\n",
-    "# predict 단계에서는 test set과 train set 과의 kernel matrix를 만들면 됩니다.\n",
-    "mean_absolute_error(\n",
-    "    df_prob4_test['target'], reg_svr.predict(df_prob4_test[X_svr].dot(df_prob4_train[X_svr].T))\n",
-    ")"
+    "(\n",
+    "    mean_absolute_error(df_prob4_test['target'], reg_svr.predict(df_prob4_test[X_svr].dot(df_prob4_train[X_svr].T))),\n",
+    "    mean_absolute_error(df_prob4_train['target'], reg_svr.predict(df_prob4_train[X_svr].dot(df_prob4_train[X_svr].T)))\n",
+    ") # 32.88361068048479 83.981486070874"
    ]
   },
   {
